--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -13257,7 +13257,6 @@
 "~^/DNB-FAQ\?.*$" "/dnb-faq";
 "~^/Terrorism-is-not-about-Terror\?.*$" "/terrorism-is-not-about-terror";
 "~^/review/Movies\?.*$" "/review/movies";
-
 "~^/Run-Length-Encoding$" "/haskell/run-length-encoding";
 "~^/doc/psychology/2020-10-vmv.*$" "/doc/psychology/2020-10-26-dyqz-rdataisbeautiful-iasked16kpeoplehowmanyholescertainobjectshave.html";
 "~^/static/js/ajax.js$" "/static/js/index";
@@ -13316,6 +13315,93 @@
 "~^/Timing/$" "/timing";
 "~^/Unseeng$" "/unseeing";
 "~^/Unsee$" "/unseeing";
+"~^/DALLE-chinese.*$" "/DALL-E";
+"~^/Danbooru2021---with-chrome.*$" "/danbooru2021";
+"~^/modal$" "/modus";
+"~^/Correlation?.*$" "/correlation";
+"~^/Charity-is-not-about-helping?.*$" "/charity-is-not-about-helping";
+"~^/doc/technology/security/$" "/doc/technology/security/index";
+"~^/doc/technology/search/$" "/doc/technology/search/index";
+"~^/doc/.*/Statistical-notes$" "/note/statistics";
+"~^/.*/fiction/Menard$" "/fiction/menard";
+"~^/doc/.*/GPT-2-preference-learning$" "/gpt-2-preference-learning";
+"~^/doc/.*/Causality$" "/causality";
+"~^/doc/longevity/2014-degrey\.pdf.*$" "/doc/longevity/index";
+"~^/doc/genetics/selection/2018-quillen.pdfAbst.*$" "/doc/genetics/selection/2018-quillen.pdf";
+"~^/doc/emIg.*$" "/doc/index";
+"~^/doc/2011-lynch\.pdf.*$" "/static/404";
+"~^/tool-ais-are-secret-agent.*$" "/tool-ai";
+"~^/static/generateLinkBibliography.hi$" "/static/build/generateLinkBibliography.hs";
+"~^/Scaling-hypothesis.Bretonn.*$" "/scaling-hypothesis";
+"~^/Hyperbolic$" "/hyperbolic-time-chamber";
+"~^/doc/technology/2017-02-%C2%BF$" "/doc/technology/2017-02-05-cms-ahistoryofimdbforums.html";
+"~^/doc/statistics/meta-analysis/1994-cook-3.*$" "/doc/statistics/meta-analysis/1994-cook-metanalysisexplanationcasebook.pdf";
+"~^/doc/statistics/causality/2001-%C3%83%C6%92%C3%82%C2%B0.*$" "/doc/statistics/causality/2001-ioannidis.pdf";
+"~^/doc/sociology/NS.*$" "/doc/sociology/index";
+"~^/doc/.*/Blackmail$" "/blackmail";
+"~^/doc/rotten.com/library/history/false-pretexts/$" "/doc/rotten.com/library/history/war/false-pretexts/index.html";
+"~^/doc/psychology/okcupid/howtonotdiealone\.pdf.*$" "/doc/psychology/okcupid/index";
+"~^/doc/.*/Bitcoin-is-Worse-is-Better$" "/bitcoin-is-worse-is-better";
+"~^/doc/psychology/1936-allport-traitnames\.pdf.*$" "/static/404";
+"~^/doc/music/music-distraction/2009-katner\.pdf.*$" "/doc/music/music-distraction/2009-kantner.pdf";
+"~^/doc/.*/otaku$" "/otaku";
+"~^/doc/.*/Epigrams$" "/epigram";
+"~^/doc/iq/2019-Schmitt\.pdf.*$" "/doc/iq/2019-schmitt.pdf";
+"~^/doc/genetics/editing/2019-ceze.pdf..*$" "/doc/genetics/editing/2019-ceze.pdf";
+"~^/doc/economics/1980-arrow.pdf%7Cjournal.*$" "/doc/economics/1980-arrow.pdf";
+"~^/doc/depression/index$" "/doc/psychiatry/depression/index";
+"~^/doc/darknet-market/2011-12-15-1$" "/doc/darknet-market/silk-road/1/2011-12-15-lsd.maff";
+"~^/doc/culture/2010-dobelli.pdflei.*$" "/doc/culture/2010-dobelli.pdf";
+"~^/doc/cukture/2912-russell\.pdf.*$" "/doc/culture/2912-russell.pdf";
+"~^/doc/borges/1936-borges-the-translatorsofthethousandandonenights\.pdf.*$" "/doc/borges/1936-borges-thetranslatorsofthethousandandonenights.pdf";
+"~^/doc/bitcoin/2008-nakamoto%EF%BC%89.*$" "/doc/bitcoin/2008-nakamoto";
+"~^/doc/anime/eva/1996-newtype-hideakianno-interview$" "/doc/anime/eva/1996-newtype-anno-interview";
+"~^/doc/ai/poetry/2019-07-O.*$" "/doc/ai/poetry/2019-07-21-taotehching-all-1ksamples.txt";
+"~^/doc/ai/1986-michie-onmachine-intell$" "/doc/ai/1986-michie-onmachineintelligence.pdf";
+"~^/doc/ai/1962Fernstudien.*$" "/doc/ai/index";
+"~^/DNM-survival.Branwen.*$" "/dnm-survival";
+"~^/changelog--submissions.*$" "/changelog";
+"~^/doc/weather/$" "/weather";
+"~^/an-abortion$" "/abortion-dialogue";
+"~^/against-the-Miletians$" "/against-the-miletians";
+"~^/CreatineRemember$" "/creatine";
+"~^/DNB-FAQ\.pdf.*$" "/dnb-faq";
+"~^/dNM-archives$" "/dnm-archives";
+"~^/doc/nic$" "/doc/nicotine/index";
+"~^/fiction//doc/ai/scaling/2022-10-06-robert-lesswrongmoreaudiblepodcast-itlookslikeyouretryingtotakeovertheworld.mp3$" "/doc/ai/scaling/2022-10-06-robert-lesswrongmoreaudiblepodcast-itlookslikeyouretryingtotakeovertheworld.mp3";
+"~^/doc/anime/eva/1996-newtype-anno-interviewGainax$" "/doc/anime/eva/1996-newtype-anno-interview";
+"~^/doc/conscientiousness\.pdf.*$" "/doc/conscientiousness/index";
+"~^/doc/dnb/2002-watanabe\.pdf.*$" "/doc/creatine/2002-watanabe.pdf";
+"~^/doc/2015-kuppusamy\.pdf.*$" "/doc/cs/cryptography/2015-kuppusamy.pdf";
+"~^/doc/1995-kramer\.pdf.*$" "/doc/dual-n-back/1995-kramer.pdf";
+"~^/doc/2003-birnbaum\.pdf.*$" "/doc/economics/2003-birnbaum.pdf";
+"~^/doc/ficti$" "/doc/fiction/index";
+"~^/doc/genetics/2016-liu\.pdf.*$" "/doc/genetics/heritable/2016-liu.pdf";
+"~^/doc/genetics/index.xml$" "/doc/genetics/index";
+"~^/doc/2015-johnson\.pdf.*$" "/doc/iq/2015-johnson.pdf";
+"~^/doc/iq/2016-lubinski\.pdf.*$" "/doc/iq/high/smpy/2016-lubinski.pdf";
+"~^/doc/2019-decabo\.pdf.*$" "/doc/longevity/2019-decabo.pdf";
+"~^/doc/2003-villegier\.pdf.*$" "/doc/nicotine/2003-villegier.pdf";
+"~^/doc/psychology/Red$" "/doc/design/typography/rubrication/index";
+"~^/doc/1928-ruch\.pdf.*$" "/doc/psychology/spaced-repetition/1928-ruch.pdf";
+"~^/doc/sociology/1981-guba-effectiveevaluation.pdfM$" "/doc/sociology/1981-guba-effectiveevaluation.pdf";
+"~^/doc/spacedrepetition/2011-bjork\.pdf.*$" "/doc/spaced-repetition/2013-bjork.pdf";
+"~^/doc/2006-peters\.pdf.*$" "/doc/statistics/bias/animal/2006-peters.pdf";
+"~^/True$" "/static/404";
+"~^/haskell/run-lengh-encoding$" "/haskell/run-length-encoding";
+"~^/./haskell/Summer-of-Code$" "/haskell/summer-of-code";
+"~^/index.pae$" "/index.page";
+"~^/indexgwern$" "/index";
+"~^/gen$" "/index";
+"~^/./Life-contract$" "/life-contract";
+"~^/./Questions$" "/questions";
+"~^/Silk----Road$" "/silk-road";
+"~^/Silk-R$" "/silk-road";
+"~^/static/generateSimilar.hi$" "/static/build/generateSimilar.hs";
+"~^/blackmail/favicon.ico$" "/static/img/favicon.ico";
+"~^/onstres$" "/stress";
+"~^/The-Melancholy-of-KyonThis$" "/the-melancholy-of-kyon";
+"~^/doc/statistics/2016-lane.pdf.*$" "/doc/statistics/bias/2016-lane.pdf";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/.*/\.git/.*$" "/static/404";
