update for the big CSS rewrite

--- a/nginx/gwern.net.conf
+++ b/nginx/gwern.net.conf
@@ -104,7 +104,13 @@ server {
         # begin redirect rewrites: for cases where a more powerful regexp match-and-replace is required
 
         ## stripping query parameters:
-        rewrite ^/static/css/fonts.css(\?v=[0-9]+)?$ /static/css/fonts-VERSIONED.css last;
+        rewrite ^/static/css/fonts\.css.*$ /static/css/fonts-VERSIONED.css last;
+
+        rewrite ^/static/js/head\.js$    /static/js/head-GENERATED.js last;
+        rewrite ^/static/js/script\.js$  /static/js/script-GENERATED.js last;
+        rewrite ^/static/css/head\.css$  /static/css/head-VERSIONED.css last;
+        rewrite ^/static/css/style\.css$ /static/css/style-VERSIONED.css last;
+
         rewrite ^/(?<old>[a-rt-z][a-su-z][b-z][a-su-z][a-hj-z][a-bd-z].*)\?.*$ /$old permanent; # exclude /static/ because of file versioning
         rewrite ^/(?<original>.*)\?chat$ /$original permanent;
         rewrite ^/(?<original>.*)\?feedback.*$ /$original permanent;
@@ -124,6 +130,7 @@ server {
         rewrite ^(?<original>.*)\?relatedposts_hit=.*$ /$original permanent;
         rewrite ^(?<original>.*)\?ref.*$ /$original permanent;
         rewrite ^(?<original>.*)\?code.*$ /$original permanent;
+        rewrite ^(?<original>.*)\?backlink.*$ /$original permanent;
 
         rewrite ^(?<original>.*)ç$ /$original permanent;
         rewrite ^/docs/(?<old>.*)$ /doc/$old permanent;
