--- a/nginx/gwern.net.conf
+++ b/nginx/gwern.net.conf
@@ -37,9 +37,10 @@ server {
 
      location / {
 
-     limit_except GET { # block scanners/botnets from spamming POST and other garbage
-                  deny  all;
-                  }
+        limit_except GET { deny all; } # block scanners/botnets from spamming POST and other garbage
+
+        location ~ ^/(confidential|private|secret)/ { auth_basic "Non-Public Pages";
+                                                      auth_basic_user_file /etc/nginx/.htpasswd; }
 
         # for linkArchive.sh/LinkArchive.hs: ensure that no crawlers pick up my mirrors, to reduce DMCA risk.
         location /doc/www/               { add_header X-Robots-Tag "none, noindex, nosnippet, noarchive, nocache"; ssi off; }
