--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -9420,3 +9420,8 @@ default "";
 "~^/doc/personal/2013-cicadas/2021-kaplan-table4-factorloadingofceocfopsychometrictests.png.*$" "/doc/psychology/personality/2021-kaplan-table4-factorloadingofceocfopsychometrictests.png";
 "~^/doc/psychology/1950-horney-neurosisandhumangrowth-ch11-resignationtheappealoffreedom.pdf.*$" "/doc/psychology/personality/1950-horney-neurosisandhumangrowth-ch11-resignationtheappealoffreedom.pdf";
 "~^/doc/philosophy/2015-03-23-gwern-rulesofthirds-mickeymousememe-perishlikeadog.jpg.*$" "/doc/philosophy/2015-03-23-rulesofthirds-mickeymousememe-perishlikeadog.jpg";
+"~^/doc/sociology/2019-lee.pdf.*$" "/doc/sociology/2019-lee-4.pdf";
+"~^/doc/darknet-market/2022-horck.pdf.*$" "/doc/darknet-market/dnm-archive/2022-horck.pdf";
+"~^/doc/darknet-market/2016-ho.pdf.*$" "/doc/darknet-market/dnm-archive/2016-ho.pdf";
+"~^/doc/ai/nn/transformer/gpt/dall-e/2/2023-samo.pdf.*$" "/doc/ai/nn/transformer/gpt/dall-e/1/2023-samo.pdf";
+"~^/doc/darknet-market/2016-martin-2.pdf.*$" "/doc/darknet-market/dnm-archive/2016-martin-2.pdf";
