--- a/nginx/gwern.net.conf
+++ b/nginx/gwern.net.conf
@@ -846,6 +846,7 @@ server {
         rewrite ^/(?<original>.*)\[.*$ /$original permanent;
         rewrite ^/(?<original>.*)\].*$ /$original permanent;
         rewrite ^/\./(?<original>.*)$ /$original permanent;
+        rewrite ^/doc/psychology/european-journal-of-parapsychology/(?<original>.*)$ /doc/psychology/parapsychology/european-journal-of-parapsychology/$original permanent;
 
         # work around *Cloudflare* bugs! For some reason, their servers determinedly drop a slash, every time. ???
         # rewrite ^/metadata/annotations/https\:\/(?<original>[0-9a-zA-Z].*) /metadata/annotation/https%3A%2F%2F$original permanent;
