--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -13414,7 +13414,6 @@
 "~^/private-key.*$" "/static/404";
 "~^/naniwaya-gallery.com/.*$" "/static/404";
 "~^/doc/rl/armstrong-controlproblem$" "/doc/reinforcement-learning/armstrong-controlproblem/index.html";
-
 "~^/doc/ai/2021-openai\.pdf.*$" "/doc/ai/index";
 "~^/doc/ai/nn/transformer/gpt/4index$" "/doc/ai/nn/transformer/gpt/4/index";
 "~^/doc/bitcoin/2002-szabo\.pdf.*$" "/doc/bitcoin/index";
@@ -13428,6 +13427,154 @@
 "~^/GPT-3-apps$" "/doc/ai/nn/transformer/gpt/index";
 "~^/Tool-AI2$" "/tool-ai";
 "~^/novelty$" "/doc/psychology/novelty/index";
+"~^/.*/Immoral-Books$" "/immoral-book";
+"~^/static/js/reader-mode-inline.js$" "/static/js/reader-mode-initial.js";
+"~^/static/img/icon/sun-verginasun-black-old.svg$" "/static/img/ornament/sun-verginasun-black.svg";
+"~^/static/img/icon/info-circle.svg$" "/static/img/icon/info-circle-regular.svg";
+"~^/static/img/icon/exclamation-triangle-white.svg$" "/static/img/icon/triangle-exclamation-regular.svg";
+"~^/static/css/include/colors.css.html$" "/static/css/colors.css.html";
+"~^/static/build/build_asset_preload_links.php$" "/static/build/index";
+"~^/review/Revolution$" "/review/cultural-revolution";
+"~^/post-sitemap.xml$" "/sitemap.xml";
+"~^/Notesopen-questions$" "/questions";
+"~^/.*/Isomorphisms$" "/isomorphism";
+"~^/GPT-3.Bratton.*$" "/gpt-3";
+"~^/Google-Alerts\?.*" "/google-alert";
+"~^/Gene-Wolfe$" "/doc/fiction/gene-wolfe/index";
+"~^/doc/technology/search/index$" "/search";
+"~^/doc/technology/2005-shirky-agroupisitsownw\.pdf.*$" "/doc/technology/2005-shirky-agroupisitsownworstenemy.pdf";
+"~^/doc/technology/2005-shirky-agroupisitsownw$" "/doc/technology/2005-shirky-agroupisitsownworstenemy.pdf";
+"~^/doc/technology/2004-03-30-shirky-situatedsoftware$" "/doc/technology/2004-03-30-shirky-situatedsoftware.html";
+"~^/doc/statistics/decision/%C3%B0.*$" "/doc/statistics/decision/index";
+"~^/doc/statistics/decision/1998-train-cch\.pdf.*$" "/doc/statistics/decision/";
+"~^/doc/statistics/causality/1998-britton-hta2130\.pdf.*$" "/doc/statistics/causality/1998-britton.pdf";
+"~^/doc/sociology/1974-martinson.pdf%C3.*$" "/doc/sociology/1974-martinson.pdf";
+"~^/doc/rotten.com/library/sex/sodomy/bible/index$" "/doc/rotten.com/library/sex/sodomy/bible/index.html";
+"~^/doc/rotten.com/library/medicine/bodily-functions/pissing/drinking-pee/woman--filling-cups.jpg$" "/doc/rotten.com/library/medicine/bodily-functions/pissing/drinking-pee/woman-filling-cups.jpg";
+"~^/doc/rot13/1999-alexander\.pdf.*$" "/doc/index";
+"~^/doc/reinforcement-learning/2022-perolat-figure1b-deepnashstrategiselfplayarchitecture.png$" "/doc/reinforcement-learning/imperfect-information/2022-perolat-figure1b-deepnashstrategoselfplayarchitecture.png";
+"~^/doc/psychology/psychedelics/index$" "/doc/psychedelics/index";
+"~^/doc/music/foxtailgrassstudio-cattleya%C3%BF%C3%BF%C3%BF%C3%BF%C3%BF%C3%BF%C3%BF%C3%BF%C3%BF%C3%BF%C3%BF%C3%BF-%C3%BF%C3%BF%C3%BF-04.jpg$" "/doc/music/foxtailgrassstudio-cattleya幻想写景-妖-04.jpg";
+"~^/doc/.*/Scanners$" "/scanners";
+"~^/doc/iq/-zagorsky\.pdf.*$" "/doc/iq/ses/2007-zagorsky.pdf";
+"~^/doc/.*/Tool-AI$" "/tool-ai";
+"~^/doc/genetics/selection/assets/$" "/doc/genetics/selection/index";
+"~^/doc/genetics/selection/about/$" "/doc/genetics/selection/index";
+"~^/doc/genetics/2016-tucker-drob\.pdf.*$" "/doc/genetics/heritable/correlation/2016-tuckerdrob.pdf";
+"~^/doc/economics/advertising/2019-03-%C3%83%C2%B0$" "/doc/economics/advertising/index";
+"~^/doc/ai/nn/gan/stylegan/2019-aydao-stylegan-transferlearning-westernportraitfaces-2.pn$" "/doc/ai/nn/gan/stylegan/2019-aydao-stylegan-transferlearning-westernportraitfaces-2.png";
+"~^/doc/ai/nn/gan/stylegan/2019-aydao-stylegan-transferlearning-westernportraitfaces-1.pn$" "/doc/ai/nn/gan/stylegan/2019-aydao-stylegan-transferlearning-westernportraitfaces-1.png";
+"~^/doc/ai/2019-11-26-gwern-deeplearning-kaibadeafeatmeme-tensorflowupgrading.pn$" "/doc/ai/2019-11-26-gwern-deeplearning-kaibadeafeatmeme-tensorflowupgrading.png";
+"~^/anime-docs$" "/index#anime-docs";
+"~^/ai$" "/doc/ai/index";
+"~^/Changelo$" "/changelog";
+"~^/An-Abortion-Dialogue.*$" "/abortion-dialogue";
+"~^/ENM-arrests$" "/dnm-arrests";
+"~^/doc/ai/2021-hu-figure2-b-datascalingfinetuningperformanceonnocaps.png$" "/doc/ai/nn/transformer/2021-hu-figure2-b-datascalingfinetuningperformanceonnocaps.png";
+"~^/doc/ai/2012-bottou-figure13-1-sgdtrainingtimetestlossvstron.png$" "/doc/ai/scaling/2012-bottou-figure13-1-sgdtrainingtimetestlossvstron.png";
+"~^/doc/2017-montgomery\.pdf.*$" "/doc/biology/2017-montgomery.pdf";
+"~^/doc/statistics/1990-tufte-envisioninginformation-ch5-bryneseuclid\.pdf.*$" "/doc/design/typography/rubrication/1990-tufte-envisioninginformation-ch5-byrneseuclid.pdf";
+"~^/doc/2005-denburg\.pdf.*$" "/doc/dual-n-back/2005-denburg.pdf";
+"~^/doc/2011-soderqvist\.pdf.*$" "/doc/dual-n-back/2011-soderqvist.pdf";
+"~^/doc/genetics/2012-anholt\.pdf.*$" "/doc/genetics/heritable/2012-anholt.pdf";
+"~^/doc/genetics/2015-fumagalli\.pdf.*$" "/doc/genetics/selection/2015-fumagalli.pdf";
+"~^/doc/genetics/2015-harpending\.pdf.*$" "/doc/genetics/selection/2015-harpending.pdf";
+"~^/doc/genetics/docs/genetics/2015-robinson\.pdf.*$" "/doc/genetics/selection/natural/human/2015-robinson.pdf";
+"~^/doc/iq/1974-stanley-mathematicaltalentdiscoverydescriptiondevelopment\.pdf.*$" "/doc/iq/high/smpy/1974-stanley-mathematicaltalentdiscoverydescriptiondevelopment.pdf";
+"~^/doc/japan/1940-nippongakujutsushinkokan-manyoshu\.pdf.*$" "/doc/japan/poetry/1940-nippongakujutsushinkokai-manyoshu.pdf";
+"~^/doc/2015-gepner\.pdf.*$" "/doc/longevity/2015-gepner.pdf";
+"~^/doc/2003-kendrick\.pdf.*$" "/doc/modafinil/2003-kendrick.pdf";
+"~^/doc/2013-quisenberry\.pdf.*$" "/doc/modafinil/2013-quisenberry.pdf";
+"~^/doc/2002-sabbagh\.pdf.*$" "/doc/nicotine/2002-sabbagh.pdf";
+"~^/doc/psychology/1941-cleckly-maskofsanity\.pdf.*$" "/doc/psychiatry/1941-cleckley-maskofsanity.pdf";
+"~^/doc/nootropics/1983-walsh\.pdf.*$" "/doc/psychiatry/lithium/1983-walsh.pdf";
+"~^/doc/2009-nemanich\.pdf.*$" "/doc/psychology/personality/conscientiousness/2009-nemanich.pdf";
+"~^/doc/algeron/2006-harris\.pdf.*$" "/doc/psychology/personality/psychopathy/2006-harris.pdf";
+"~^/doc/2011-nist-cradatemplate\.pdf.*$" "/doc/radiance/2011-nist-cradatemplate.pdf";
+"~^/google-shutdown/$" "/google-shutdown";
+"~^/Waifu$" "/twdne";
+"~^/The$" "/subculture";
+"~^/arrests$" "/dnm-arrests";
+"~^/Nicoti$" "/nicotine";
+"~^/ltheanine$" "/nootropics#theanine";
+"~^/fisher$" "https://en.wikipedia.org/wiki/Ronald_Fisher";
+"~^/adSense$" "/ads";
+"~^/RNNmetadata$" "/rnn-metadata";
+"~^/Scaling$" "/scaling-hypothesis";
+"~^/Sidenote$" "/sidenotes";
+"~^/Startup-idmis$" "/startup-ideas";
+"~^/static/sync-gwern.net.sh$" "/static/build/sync-gwern.net.sh";
+"~^/static/css/include/components/colors-dark-GENERATED.css$" "/static/css/colors-dark-GENERATED.css";
+"~^/static/css/include/components/light-mode-adjustments.css$" "/static/css/light-mode-adjustments.css";
+"~^/doc/psychiatry/anxiety/favicon.ico$" "/static/img/favicon.ico";
+"~^/doc/history/s-l-a-marshall/favicon.ico$" "/static/img/favicon.ico";
+"~^/doc/fiction/poetry/favicon.ico$" "/static/img/favicon.ico";
+"~^/doc/cs/2001-12-02-treginaldgibbons-isyoursonacomputerhacker.html/favicon.ico$" "/static/img/favicon.ico";
+"~^/static/img/logo/logo-whitebg.jpg$" "/static/img/logo/logo-whitebg-large-border.png";
+"~^/static/js/dark-mode-inline.js$" "/static/js/dark-mode-inline.js";
+"~^/terrorism-is-not$" "/terrorism-is-not-effective";
+"~^/Terrorism$" "/terrorism-is-not-effective";
+"~^/Turing-Complete$" "/turing-complete";
+"~^/adderall.*$" "/nootropic/nootropic#adderall";
+"~^/doc/rotten.com/library/crime/prison/rape-in-prison/rape-in-prison.pdf.*$" "/doc/rotten.com/library/sex/rape/index.html";
+"~^/doc/personal/gwern-google-reader-subscriptions.xml$" "/doc/personal/rss-subscriptions.opml";
+"~^/complexity-vs-ai.page$" "/complexity.page";
+"~^/Hybrid-Rainbow$" "/fiction/hybrid-rainbow";
+"~^/doc/ai/poetry/2019-0pTPFSZB.*$" "/doc/ai/poetry/index";
+"~^/static/css/old/$" "/static/css/";
+"~^/sociology/index$" "/doc/sociology/index";
+"~^/Self-decrypting%C3%83%E2%84%A2%C3%82%C2%AA20files.*$" "/self-decrypting";
+"~^/Nootropicsmixing.*$" "/nootropics/nootropic";
+"~^/Nootropics/comments/1coemc/modafinil_tolerance_possible_modes_of_action/$" "https://www.reddit.com/r/Nootropics/comments/1coemc/modafinil_tolerance_possible_modes_of_action/";
+"~^/doc/traffic-history.png$" "/doc/traffic/index";
+"~^/doc/technology/security/index$" "/doc/cs/security/index";
+"~^/docs.google.com/forms/d/e/1FAIpQLSfw6vqr0ffTkuJ6YhEvr2QWN_hDSR6ua7mX9OkVJf0U2ApECw/viewform$" "https://docs.google.com/forms/d/e/1FAIpQLSd7uqL7B_l1HFIfXc8D_nZyumaOv58msK7jhl4XzQjWODWKdA/viewform";
+"~^/doc/psychology/2019-01-20-2.*$" "/doc/psychology/2019-01-20-gs-socks.csv";
+"~^/doc/iq/high/munich/2013-eller\.pdf.*$" "/doc/iq/high/munich/2013-heller.pdf";
+"~^/doc/darcs-history.png$" "/doc/traffic/2011-gwern-december-darcs-history.png";
+"~^/doc/cs/algorithm/docs/ai/video/generation/index$" "/doc/ai/video/generation/index";
+"~^/doc/bitcoin/UTZJ.*$" "/doc/bitcoin/index";
+"~^/doc/ai/poetry/oVX.*$" "/doc/ai/poetry/index";
+"~^/Danbooru2021Ot.*$" "/danbooru2021";
+"~^/cryptobitcoin$" "/index#cryptobitcoin";
+"~^/%7C-Essays.*$" "/index";
+"~^/Danbooru2020It$" "/Danbooru2021#danbooru2020";
+"~^/Death-Note-A$" "/death-note-anonymity";
+"~^/doc/ai/anonymous-mlp-multilayerperceptron.png$" "/doc/ai/nn/transformer/attention/hierarchical/anonymous-mlp-multilayerperceptron.png";
+"~^/doc/ai/2021-radford-clip-figure9-clipcomputescaling.png$" "/doc/ai/nn/transformer/clip/2021-radford-clip-figure9-clipcomputescaling.png";
+"~^/doc/cat/docs/catnip/2010-ellis\.pdf.*$" "/doc/cat/catnip/2010-ellis.pdf";
+"~^/doc/2008-jost\.pdf.*$" "/doc/crime/terrorism/2008-jost.pdf";
+"~^/doc/darknet-market/2011-08-25-1$" "/doc/darknet-market/silk-road/1/2011-12-15-lsd.maff";
+"~^/doc/darknet-market/silk-road/2/index.php$" "/doc/darknet-markets/silk-road/2/index";
+"~^/doc/2000-fishbain\.pdf.*$" "/doc/dual-n-back/2000-fishbain.pdf";
+"~^/doc/2009-swerdlow\.pdf.*$" "/doc/dual-n-back/2009-swerdlow.pdf";
+"~^/doc/economics/1971mcclellandtheachievingsociety\.pdf.*$" "/doc/economics/1971-mcclelland-theachievingsociety.pdf";
+"~^/doc/mooreslaw-handeljones-costpergate.png$" "/doc/economics/mooreslaw-handeljones-costpergate.png";
+"~^/doc/genetics/2016-zhang\.pdf.*$" "/doc/genetics/gametogenesis/2016-zhang.pdf";
+"~^/doc/genetics/2005-shikano\.pdf.*$" "/doc/genetics/heritable/2005-shikano.pdf";
+"~^/doc/genetics/heritable/emergenesis/JyI$" "/doc/genetics/heritable/emergenesis/index";
+"~^/doc/386$" "/doc/index";
+"~^/doc/2006-obrien\.pdf.*$" "/doc/modafinil/2006-obrien.pdf";
+"~^/doc/2001-berlin\.pdf.*$" "/doc/nicotine/2001-berlin.pdf";
+"~^/doc/2011-raval\.pdf.*$" "/doc/nicotine/2011-raval.pdf";
+"~^/doc/psychology/2019-lextexier.pdr$" "/doc/psychology/2019-letexier.pdf";
+"~^/doc/psychology/2019-%C3%B0$" "/doc/psychology/index";
+"~^/doc/2010-abzug\.pdf.*$" "/doc/psychology/personality/conscientiousness/2010-abzug.pdf";
+"~^/doc/technology/Spaced-repetition$" "/spaced-repetition";
+"~^/doc/2017-green\.pdf.*$" "/doc/sociology/2017-green.pdf";
+"~^/doc/sociology/guba$" "/doc/sociology/1981-guba-effectiveevaluation.pdf";
+"~^/doc/1995-sterling\.pdf.*$" "/doc/statistics/bias/1995-sterling.pdf";
+"~^/doc/2008-scherer\.pdf.*$" "/doc/statistics/bias/2008-scherer.pdf";
+"~^/doc/20120103-20120702-gwern.net-analytics\.pdf.*$" "/doc/traffic/20120103-20120702-gwern.net-analytics.pdf";
+"~^/doc/traffic/ad/$" "/doc/economics/ad/index";
+"~^/fiction/Batma$" "/fiction/batman";
+"~^/fMP-parody$" "/fmp-parody";
+"~^/notable$" "/index#notable";
+"~^/nootropics.page$" "/nootropic/nootropics.page";
+"~^/note/scaling-laws$" "/note/scaling";
+"~^/Prediction-Markets$" "/prediction-market";
+"~^/static/js/inline.js$" "/static/js/index";
+"~^/TWDNEHit$" "/twdne#text";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/.*/\.git/.*$" "/static/404";
