--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -9439,3 +9439,8 @@ default "";
 "~^/doc/psychology/1955-boring.pdf.*$" "/doc/psychology/parapsychology/1955-boring.pdf";
 "~^/doc/psychology/1950-sabine.pdf.*$" "/doc/psychology/parapsychology/1950-sabine.pdf";
 "~^/doc/psychology/2006-wakslak.pdf.*$" "/doc/psychology/cognitive-bias/2006-wakslak.pdf";
+"~^/doc/psychology/1981-siegel.pdf.*$" "/doc/psychology/parapsychology/1981-siegel.pdf";
+"~^/doc/psychology/1967-henslin.pdf.*$" "/doc/psychology/parapsychology/1967-henslin.pdf";
+"~^/doc/ai/1999-bradbury-matrioshkabrains.pdf.*$" "/doc/ai/scaling/hardware/1999-bradbury-matrioshkabrains.pdf";
+"~^/doc/biology/2015-gallagher.pdf.*$" "/doc/psychology/animal/bird/2015-gallagher.pdf";
+"~^/doc/biology/2023-agrelo.pdf.*$" "/doc/psychology/animal/bird/2023-agrelo.pdf";
