--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -13575,6 +13575,25 @@
 "~^/Prediction-Markets$" "/prediction-market";
 "~^/static/js/inline.js$" "/static/js/index";
 "~^/TWDNEHit$" "/twdne#text";
+"~^/.*Losing-Your-Grip.*$" "/doc/fiction/criticism/2009-fortugno.pdf";
+"~^/OpenAI.*$" "https://en.wikipedia.org/wiki/OpenAI";
+"~^/doc/.*/docs/eva/2003-oshii-izubuchi.*$" "/doc/eva/2003-oshii-izubuchi";
+"~^/doc/philosophy/religion/2012-09-27-nagel$" "/doc/philosophy/religion/2012-09-27-nagel.txt";
+"~^/doc/orderstatistics-increasedvarianceadvantage.png$" "/doc/statistics/order/gwern-orderstatistics-increasedvarianceadvantage.png";
+"~^/doc/sociology/\(2020\)-shi\.pdf.*$" "/doc/sociology/2020-shi.pdf";
+"~^/doc/borges/1947-borges-anewrefutation$" "/doc/borges/1947-borges-anewrefutationoftime.pdf";
+"~^/DarkNetMarkets$" "/dnm-archive";
+"~^/meta-analysis$" "/dnb-meta-analysis";
+"~^/doc/2012-young-2\.pdf.*$" "/doc/culture/2012-young-2.pdf";
+"~^/doc/2005-duckworth\.pdf.*$" "/doc/dual-n-back/2005-duckworth.pdf";
+"~^/doc/genetics/2017-hatzikotoulas\.pdf.*$" "/doc/genetics/heritable/2017-hatzikotoulas.pdf";
+"~^/doc/2019-gardner-dorodango-5displaypieces.jpg$" "/doc/japan/art/2019-gardner-dorodango-5displaypieces.jpg";
+"~^/doc/2012-amer\.pdf.*$" "/doc/nootropic/2012-amer.pdf";
+"~^/doc/psychology/okcupid/thebestquedtionsforafirstdate.html$" "/doc/psychology/okcupid/thebestquestionsforafirstdate.html";
+"~^/doc/algernon/2006harris\.pdf.*$" "/doc/psychology/personality/psychopathy/2006-harris.pdf";
+"~^/Startup-ide$" "/startup-ideas";
+"~^/waifu$" "/twdne";
+"~^/help$" "/design";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/.*/\.git/.*$" "/static/404";
@@ -19134,6 +19153,10 @@
 "~^/.*biolinky.*$" "/static/404";
 "~^/.*sarang188.*$" "/static/404";
 "~^.*[Ss]lot.*game.*$" "/static/404";
+"~^/wellbutrinonline.*$" "/static/404";
+"~^/tabs$" "/static/404";
+"~^/Runtime/.*$" "/static/404";
+"~^/4.4-MB.*$" "/static/404";
 
 # removed feature:
 "~^/static/previews/.*\.png$" "/static/404";
