--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -13594,6 +13594,127 @@
 "~^/Startup-ide$" "/startup-ideas";
 "~^/waifu$" "/twdne";
 "~^/help$" "/design";
+"~^/doc/ai/1980-west.pdf.*$" "/doc/ai/index";
+"~^/otakufil.*$" "/otaku";
+"~^/GPT-3Shakespeare.*$" "/gpt-3#william-shakespeare";
+"~^/_EoE.*$" "https://en.wikipedia.org/wiki/The_End_of_Evangelion";
+"~^/doc/music/music-distraction/1972-fox.Effects.*$" "/doc/music/music-distraction/1972-fox.pdf";
+"~^/advertising.*$" "/ad";
+"~^/doc/biology/nav_mainpage.gif.*$" "/doc/biology/2000-iapac-norvir/images/nav_mainpage.gif";
+"~^/doc/biology/images/subsubtitle_education_dismg.gif.*$" "/doc/biology/2000-iapac-norvir/subsubtitle_education_dismg.gif";
+"~^/doc/biology/images/sub_bkgd.gif.*$" "/doc/biology/2000-iapac-norvir/sub_bkgd.gif";
+"~^/doc/biology/images/2000-iapac-norvir-sub_header_logo.gif.*$" "/doc/biology/2000-iapac-norvir/sub_header_logo.gif";
+"~^/doc/biology/2000-iapac-norvir/images/vertical_rule.gif.*$" "/doc/biology/2000-iapac-norvir/vertical_rule.gif";
+"~^/doc/biology/2000-iapac-norvir/images/thin_separator.gif.*$" "/doc/biology/2000-iapac-norvir/thin_separator.gif";
+"~^/doc/biology/2000-iapac-norvir/images/nav_whatsnew.gif.*$" "/doc/biology/2000-iapac-norvir/nav_whatsnew.gif";
+"~^/doc/biology/2000-iapac-norvir/images/nav_publications.gif.*$" "/doc/biology/2000-iapac-norvir/nav_publications.gif";
+"~^/doc/biology/2000-iapac-norvir/images/nav_links.gif.*$" "/doc/biology/2000-iapac-norvir/nav_links.gif";
+"~^/doc/biology/2000-iapac-norvir/images/nav_joinIAPAC.gif.*$" "/doc/biology/2000-iapac-norvir/nav_joinIAPAC.gif";
+"~^/doc/biology/2000-iapac-norvir/images/nav_education.gif.*$" "/doc/biology/2000-iapac-norvir/nav_education.gif";
+"~^/doc/biology/2000-iapac-norvir/images/nav_conferences.gif.*$" "/doc/biology/2000-iapac-norvir/nav_conferences.gif";
+"~^/doc/biology/2000-iapac-norvir/images/nav_advocacy.gif.*$" "/doc/biology/2000-iapac-norvir/nav_advocacy.gif";
+"~^/doc/biology/2000-iapac-norvir/images/nav_aboutIAPAC.gif.*$" "/doc/biology/2000-iapac-norvir/nav_aboutIAPAC.gif";
+"~^/doc/biology/2000-iapac-norvir/images/nav_mainpage.gif.*$" "/doc/biology/2000-iapac-norvir/nav_mainpage.gif";
+"~^/[Dd]anbooru2021下.*$" "/danbooru2021";
+"~^/best-manga-ever.*$" "https://en.wikipedia.org/wiki/Qualia_the_Purple";
+"~^/doc/dl/danbooru/2020.training_data.zip.*$" "/danbooru2021#download";
+"~^/doc/dl/danbooru/index.html.*$" "/danbooru2021";
+"~^/doc/dl/index.html.*$" "/doc/ai/nn/index";
+"~^/doc/psychology/1966-dawis.pdf.*$" "/doc/psychology/cognitive-bias/sunk-cost/1976-dawkins.pdf";
+"~^/doc/sociology/2000-scott-rationalchoicetheory.pdf.*$" "/doc/statistics/decision/2000-scott.pdf";
+"~^/The-Cultural-Revolution$" "/review/cultural-revolution";
+"~^/doc/biology/2000-iapac-norvir/temperature/shakeme.gif$" "/static/404";
+"~^/doc/ai/2021-gwern-danbooru2021\.pdf.*$" "/danbooru2021";
+"~^/WiFi-bandwidth-benchmarking$" "/wifi";
+"~^/Terrorism-is-not-about-Terror.html$" "/terrorism-is-not-about-terror";
+"~^/.*/Clone$" "/clone";
+"~^/static/img/icon/copy.svg$" "/static/404";
+"~^/Silk-Road/silkroad5v7dywlc.*$" "/silk-road";
+"~^/miscellaneous$" "/index";
+"~^/iq-halo$" "/iq";
+"~^/icons/spritemap.svg$" "/static/404";
+"~^/gpt3-newsletter$" "/scaling-hypothesis";
+"~^/Embryo-selection\?utm_source.*$" "/embryo-selection";
+"~^/doc/statistics/decision/1982-sober\.pdf.*$" "/doc/statistics/decision/1982-sobel.pdf";
+"~^/doc/statistics/decision/1957-bellman-dynamicprogrammer\.pdf.*$" "/doc/statistics/decision/1957-bellman-dynamicprogramming.pdf";
+"~^/docs-/-spacedrepetition-/-2012-son\.pdf.*$" "/doc/psychology/spaced-repetition/2012-son.pdf";
+"~^/doc/psychology/personality/1950-horney-neurosisandhumangrowth\.pdf.*$" "/doc/psychology/personality/1950-horney-neurosisandhumangrowth-ch11-resignationtheappealoffreedom.pdf";
+"~^/doc/psychology/1996-rachman\.pdf.*$" "/doc/psychology/1966-rachman.pdf";
+"~^/doc/maildelivery/simulated-inferencesamplebysample.gif$" "/doc/statistics/decision/mail-delivery/gwern-simulated-inferencesamplebysample.webm";
+"~^/doc/iq-smpytip.png$" "/doc/iq/high/smpy/gwern-iq-smpytip.png";
+"~^/doc/iodine/1972-fierro-ben%C3%BF%C3%BFtez\.pdf.*$" "/doc/iodine/1972-fierrobenitez.pdf";
+"~^/doc/cs/cryptography/1995-impagliazzo$" "/doc/cs/cryptography/1995-impagliazzo.pdf";
+"~^/doc/anime/2009-12-18-%FF%FF%FF%FF%FF%FF%FF%FF%FF%FF%FF%FF%FF%FF%FF-pixiv7701090-greenseevee-encolor.tar$" "/doc/anime/2009-12-18-緑華野菜子-pixiv7701090-greenseevee-encolor.tar";
+"~^/DNB-FAQRel.*$" "/dnb-faq";
+"~^/directories$" "/doc/index";
+"~^/adrofinil$" "/adrafinil";
+"~^/Complexi$" "/complexity";
+"~^/Death-Note-script3$" "/death-note-script";
+"~^/dn,-archives$" "/dnm-archive";
+"~^/doc/1999-bradburymatrioshkabrains\.pdf.*$" "/doc/ai/1999-bradbury-matrioshkabrains.pdf";
+"~^/doc/ai/2019-toppol\.pdf.*$" "/doc/ai/nn/2019-topol.pdf";
+"~^/doc/ai/2021-hu-figure6-largerlemoncaptionmodelsaremoresampleefficient.png$" "/doc/ai/nn/transformer/2021-hu-figure6-largerlemoncaptionmodelsaremoresampleefficient.png";
+"~^/Anime$" "/review/anime";
+"~^/doc/2002-watanabe\.pdf.*$" "/doc/creatine/2002-watanabe.pdf";
+"~^/doc/culture/2010/dobelli\.pdf.*$" "/doc/culture/2010-dobelli.pdf";
+"~^/doc/sr/2019-04-22-deepdotweb-dnmlst.html$" "/doc/darknet-markets/2019-04-22-deepdotweb-dnmlist.html";
+"~^/doc/2008-kuriyama\.pdf.*$" "/doc/dual-n-back/2008-kuriyama.pdf";
+"~^/doc/genetics/2013-segal-1\.pdf.*$" "/doc/genetics/heritable/2013-segal-1.pdf";
+"~^/doc/genetics/2012-hodeswertz\.pdf.*$" "/doc/genetics/selection/2012-hodeswertz.pdf";
+"~^/doc/iq/1988-benbow\.pdf.*$" "/doc/iq/high/smpy/1988-benbow.pdf";
+"~^/doc/iq/2016-wai\.pdf.*$" "/doc/iq/ses/2015-wai.pdf";
+"~^/doc/modafinil/darknet-market/2013-09$" "/doc/modafinil/darknet-market/inbdex";
+"~^/doc/2003-salinpascual\.pdf.*$" "/doc/nicotine/2003-salinpascual.pdf";
+"~^/doc/2003-shiffman\.pdf.*$" "/doc/nicotine/2003-shiffman.pdf";
+"~^/philosoph$" "/doc/philosophy/index";
+"~^/doc/2016-barrett\.pdf.*$" "/doc/psychedelic/2016-barrett.pdf";
+"~^/doc/psychology/1949-stouffer-theamericansoldier\.pdf.*$" "/doc/psychology/1949-stouffer-theamericansoldier-v1-adjustmentduringarmylife.pdf";
+"~^/doc/psychology/1984-dawis\.pdf.*$" "/doc/psychology/animal/1924-davis.pdf";
+"~^/doc/psychology/1966-dawis\.pdf.*$" "/doc/psychology/cognitive-bias/sunk-cost/1976-dawkins.pdf";
+"~^/doc/1974-clay\.pdf.*$" "/doc/radiance/1974-clay.pdf";
+"~^/doc/1976-efron\.pdf.*$" "/doc/statistics/1976-efron.pdf";
+"~^/doc/sociology/2000-scott-rationalchoicetheory\.pdf.*$" "/doc/statistics/decision/2000-scott.pdf";
+"~^/doc/statistics/1990-crowley\.pdf.*$" "/doc/statistics/meta-analysis/1990-crowley.pdf";
+"~^/doc/statistics/1961-harter\.pdf.*$" "/doc/statistics/order/1961-harter.pdf";
+"~^/fiction/Dying-Outside/index.html$" "/fiction/dying-outside";
+"~^/doc/google/index$" "/doc/technology/google/index";
+"~^/doi/pdf/10.1177/0305735607076444$" "/docs/music/music-distraction/2007-cassidy.pdf";
+"~^/Fake$" "/fake-journal-club";
+"~^/Fac$" "/face";
+"~^/fiction/before-daw$" "/fiction/before-dawn";
+"~^/Abandon$" "/doc/sociology/abandoned-footnotes/index";
+"~^/GPT-3mes$" "/gpt-3";
+"~^/Blog$" "/index";
+"~^/Littlewoo$" "/littlewood";
+"~^/doc/littleboy$" "/doc/anime/eva/little-boy/2005-little-boy";
+"~^/LSD-microdosingis$" "/lsd-microdosing";
+"~^/Adderal$" "/nootropics#adderall";
+"~^/note/Local$" "/note/local-optima";
+"~^/Note$" "/notes/notes";
+"~^/otakuAnd$" "/otaku";
+"~^/Anime-review$" "/review/anime";
+"~^/GPT-%C3%83%C2%B0$" "/gpt-3";
+"~^/Typography$" "/static/build/Typography.hs";
+"~^/static/color-scheme-convert.php$" "/static/build/color-scheme-convert.php";
+"~^/doc/japan/history/favicon.ico$" "/static/img/favicon.ico";
+"~^/doc/www/alumni.media.mit.edu/7b5546831e3d9ffa77c2b6f4f8ec757baac9aed7.html/favicon.ico$" "https://alumni.media.mit.edu/favicon.ico";
+"~^/static/img/logo.png$" "/static/img/logo/logo.png";
+"~^/static/template/inlined-foot-template.html$" "/static/include/inlined-fonts.html";
+"~^/Timning$" "/timing";
+"~^/Tool-A$" "/tool-ai";
+"~^/Unsee-ing$" "/unseeing";
+"~^/newsite$" "/changelog";
+"~^/index-temp$" "/index";
+"~^/static/include/inlined-fonts.html$" "/static/css/fonts-VERSIONED.css";
+"~^/doc/statistics/bayes/2009-%C3%B0$" "/doc/statistics/bayes/2009-kaas.html";
+"~^/doc/ai/2019/topol\.pdf.*$" "/doc/ai/nn/2019-topol.pdf";
+"~^/doc/ai/2021-ding-figure1-cogviewcherrypickedsamples.png$" "/doc/ai/nn/transformer/gpt/dall-e/2021-ding-figure1-cogviewcherrypickedsamples.png";
+"~^/newsletter/2018/index.html$" "/newsletter/2018/index";
+"~^/Nicotine2nd$" "/nicotine";
+"~^/[Dd]anbooru202[0-9]下.*$" "/danbooru2021";
+"~^/newsletter/2019/11/changelog.*$" "/newsletter/2019/11#changelog";
+"~^/doc/darknet-market/silk-road/1/gwern-mybitcoin-login.pngnever.*$" "/doc/darknet-market/silk-road/1/gwern-mybitcoin-login.png";
+"~^/doc/fiction/science-fiction/frank-herbert/1980-omni-august.pdf.*$" "/doc/fiction/science-fiction/frank-herbert/1980-omni-july.pdf";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/.*/\.git/.*$" "/static/404";
@@ -19157,6 +19278,11 @@
 "~^/tabs$" "/static/404";
 "~^/Runtime/.*$" "/static/404";
 "~^/4.4-MB.*$" "/static/404";
+"~^/.*casino.*\..*$" "/static/404";
+"~^/tupy.ac.*$" "/static/404";
+"~^/tembakikankoi.*$" "/static/404";
+"~^/realonlinelicence.*$" "/static/404";
+"~^/free-php.*$" "/static/404";
 
 # removed feature:
 "~^/static/previews/.*\.png$" "/static/404";
