--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -13715,6 +13715,79 @@
 "~^/newsletter/2019/11/changelog.*$" "/newsletter/2019/11#changelog";
 "~^/doc/darknet-market/silk-road/1/gwern-mybitcoin-login.pngnever.*$" "/doc/darknet-market/silk-road/1/gwern-mybitcoin-login.png";
 "~^/doc/fiction/science-fiction/frank-herbert/1980-omni-august.pdf.*$" "/doc/fiction/science-fiction/frank-herbert/1980-omni-july.pdf";
+"~^/changelo$" "/changelog";
+"~^/changel$" "/changelog";
+"~^/rape/date-rape/index.html.*$" "/doc/rotten.com/library/sex/rape/date-rape/index.html";
+"~^/rape/date-rape/$" "/doc/rotten.com/library/sex/rape/date-rape/index.html";
+"~^/doc/2001-zhadanova\.pdf.*$" "/doc/melatonin/2001-zhdanova.pdf";
+"~^/static/gitit-users\?revision.*$" "/static/gitit-users";
+"~^/.*/Resorter$" "/resort";
+"~^/doc/rotten.com/library/bio/hitler/adolf-hitler/index\.pdf.*$" "/doc/rotten.com/library/bio/nazi/adolf-hitler/index.html";
+"~^/doc/traffic/%C3%B0.*$" "/doc/traffic/index";
+"~^/doc/melatonin/2016oboegers\.pdf.*$" "/doc/melatonin/index";
+"~^/doc/mail-delivery/index$" "/doc/statistics/decision/mail-delivery/index";
+"~^/doc/economics/2018-maintland\.pdf.*$" "/doc/economics/2018-maitland.pdf";
+"~^/doc/darknet-market/agora/%C2%BF.*$" "/doc/darknet-market/agora/";
+"~^/doc/ai/1962Index$" "/doc/ai/1962-kelley.pdf";
+"~^/doc/2001-principlesforecasting\.pdf.*$" "/doc/statistics/prediction/2001-armstrong-principlesforecasting.pdf";
+"~^/doc/1992-bloch-smith\.pdf.*$" "/doc/history/1992-blochsmith.pdf";
+"~^/2012-election-predictions/Link.*$" "/2012-election-predictions";
+"~^/newsRSS$" "/changelog";
+"~^/doc/2000-vaughan\.pdf.*$" "/doc/dual-n-back/2000-vaughan.pdf";
+"~^/doc/2011-roughan\.pdf.*$" "/doc/dual-n-back/2011-roughan.pdf";
+"~^/doc/genetics/1971-todd\.pdf.*$" "/doc/genetics/heritable/1971-todd.pdf";
+"~^/doc/lesswrong-survey/2017-hpmor-reviews.csv$" "/doc/lesswrong-survey/hpmor/2017-hpmor-reviews.csv";
+"~^/doc/1997-kendrick\.pdf.*$" "/doc/modafinil/1997-kendrick.pdf";
+"~^/doc/statistics/2014-zhu\.pdf.*$" "/doc/nicotine/2014-zhu.pdf";
+"~^/doc/1984-bazerman\.pdf.*$" "/doc/psychology/cognitive-bias/sunk-cost/1984-bazerman.pdf";
+"~^/doc/rotten.com/library/bio/entertainers/comic/david-letterman/doc/rotten.com/library/bio/entertainers/comic/david-letterman/letterman_any_sense.mp3$" "/doc/rotten.com/library/bio/entertainers/comic/david-letterman/letterman_any_sense.mp3";
+"~^/doc/1978-rossi\.pdf.*$" "/doc/sociology/1978-rossi.pdf";
+"~^/doc/2003-lee\.pdf.*$" "/doc/statistics/bias/animal/2003-lee.pdf";
+"~^/doc/Notes$" "/note/notes";
+"~^/Faves$" "/face";
+"~^/Morning$" "/morning-writing";
+"~^/Scal$" "/scaling-hypothesis";
+"~^/TWDNI$" "/twdne";
+"~^/danbooru20213.*$" "/danbooru2021";
+"~^/retrocognitionn.*$" "/retrocognition";
+"~^/doc/psychology/pers$" "/doc/psychology/personality/index";
+"~^/replication-crisis$" "/replication";
+"~^/otaku-predictions.page$" "/otaku-prediction.page";
+"~^/doc/tutorial/%C2%BF.*$" "/doc/tutorial/index";
+"~^/spaced-repetition%D0%9D%D0.*$" "/spaced-repetition";
+"~^/.*/haskell/Run-Length-Encoding$" "/haskell/run-length-encoding";
+"~^/graveyard$" "/design-graveyard";
+"~^/doc/rotten.com/library/bio/business/henry-ford/index$" "/doc/rotten.com/library/bio/business/henry-ford/index.html";
+"~^/doc/qiu2009\.pdf.*$" "/doc/dual-n-back/2009-qiu.pdf";
+"~^/doc/modafinil-review2008\.pdf.*$" "/doc/modafinil/2008-minzenberg.pdf";
+"~^/doc/longevity/docs/cs/1955-nash$" "/doc/cs/cryptography/1955-nash";
+"~^/doc/iq/1927-kelley-interpretationofeducationalmeasurements.pdfJ$" "/doc/iq/1927-kelley-interpretationofeducationalmeasurements.pdf";
+"~^/doc/history/2019-09-18-upx.*$" "/doc/history/2019-09-18-medievalindonesia-thelandshuterhochzeit1475.html";
+"~^/doc/darknet-market/kmER.*$" "/doc/darknet-market/index";
+"~^/doc/culture/2006-rijlaarsdam\.pdf.*$" "/doc/culture/index";
+"~^/doc/biology/advocacy.html$" "https://web.archive.org/web/20020610203033/http://www.iapac.org:80/advocacy.html";
+"~^/db$" "/dnb-faq";
+"~^/Complexit$" "/complexity";
+"~^/features$" "/design#features";
+"~^/Design/$" "/design";
+"~^/DNM-archieve$" "/dnm-archives";
+"~^/dnb-meta-analysis/$" "/dnm-meta-analysis";
+"~^/doc/2012-russell\.pdf.*$" "/doc/culture/2012-russell.pdf";
+"~^/Black-mark$" "/dnm-arrest";
+"~^/doc/dnb/2011-jaeggi-2-poster\.pdf.*$" "/doc/dual-n-back/2011-jaeggi-poster.pdf";
+"~^/doc/genet$" "/doc/genetics/index";
+"~^/doca$" "/doc/index";
+"~^/doc/824$" "/doc/index";
+"~^/doc/iq/2022-warne$" "/doc/iq/2022-warne.pdf";
+"~^/doc/melatonin-/2014-boergers\.pdf.*$" "/doc/melatonin/2014-boergers.pdf";
+"~^/doc/2009-tang\.pdf.*$" "/doc/nicotine/2009-tang.pdf";
+"~^/./Hunter$" "/hunter";
+"~^/iqWe$" "/iq";
+"~^/note/Faster$" "/notes/faster";
+"~^/reseach$" "/research-criticism";
+"~^/doc/borges/favicon.ico$" "/static/img/favicon.ico";
+"~^/doc/sociology/favicon.ico$" "/static/img/favicon.ico";
+"~^/Intelligence$" "/doc/iq/index";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/.*/\.git/.*$" "/static/404";
