--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -9444,3 +9444,7 @@ default "";
 "~^/doc/ai/1999-bradbury-matrioshkabrains.pdf.*$" "/doc/ai/scaling/hardware/1999-bradbury-matrioshkabrains.pdf";
 "~^/doc/biology/2015-gallagher.pdf.*$" "/doc/psychology/animal/bird/2015-gallagher.pdf";
 "~^/doc/biology/2023-agrelo.pdf.*$" "/doc/psychology/animal/bird/2023-agrelo.pdf";
+"~^/doc/psychology/smell/2021-littman.pdf.*$" "/doc/psychology/smell/perfume/2021-littman.pdf";
+"~^/doc/psychology/smell/2019-kraft.pdf.*$" "/doc/psychology/smell/perfume/2019-kraft.pdf";
+"~^/doc/psychology/smell/2007-shiner.pdf.*$" "/doc/psychology/smell/perfume/2007-shiner.pdf";
+"~^/doc/psychology/smell/2019-kraft-figure2-schematicrepresentationofduneperfume.jpg.*$" "/doc/psychology/smell/perfume/2019-kraft-figure2-schematicrepresentationofduneperfume.jpg";
